--- a/inventry/WEB-INF/web.xml
+++ b/inventry/WEB-INF/web.xml
@@ -13,17 +13,17 @@
     
      <servlet>
         <servlet-name>product</servlet-name>
-        <servlet-class>com.objectfrontier.servlet.productAddServlet</servlet-class>
+        <servlet-class>com.objectfrontier.servlet.productServlet</servlet-class>
     </servlet>
 
     <servlet-mapping>
         <servlet-name>details</servlet-name>
-        <url-pattern>/user</url-pattern>
+        <url-pattern>/userDetail</url-pattern>
     </servlet-mapping> 
     
     <servlet-mapping>
         <servlet-name>credential</servlet-name>
-        <url-pattern>/login</url-pattern>
+        <url-pattern>/user</url-pattern>
     </servlet-mapping>
     
     <servlet-mapping>
